--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,2 @@
-[x] automatically grab matchAmount from TBA data
 [ ] print match data on .md or .html file instead of .txt
-[ ] list teams we are in and against. don't separate by match, but do sort by match
+[ ] list only matches we are in and against. don't separate by match, but do sort by match
